# ec-hackathon-aim

./: .env  .gitignore  README.md  app.py  config.py  llm_client.py  main.py  pdf_processor.py  pyproject.toml  storage.py
src/: config.py
src/routes/: chat.py  document.py
src/services/: document_processor.py  llm_client.py
src/storage/: storage.py
src/utils/: file_helpers.py
static/css/: style.css
static/js/: chat.js
storage/2ea32a93-9e8a-4d5b-a970-35573139469d/: data.json
storage/beabef6c-491a-4a80-bffe-0953c68557dc/: data.json
storage/c1e4e137-6eed-404a-854d-e6a58953787c/: data.json
storage/c8e7e5a8-32dc-4fe2-9bd8-4692877a082f/: data.json
storage/caefd615-a980-491a-98d8-33f390b7f4a5/: data.json
storage/d333f60e-b548-4786-b427-c89519ae8003/: data.json
storage/e70e5a6d-b8cc-405a-bd1d-14ee658b284d/: data.json
templates/: chat.html  index.html
uploads/: documentation.txt  mock-documentation.txt
