[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]

[tool.poetry]
name = "ec-hackathon-aim"
version = "0.1.0"
description = ""
authors = ["Marcus Hamelink <hamelink.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docling = "^2.24.0"
sentence-transformers = "^3.4.1"
flask = "^3.1.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
ollama = "^0.4.7"
pdfplumber = "^0.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
